fix scrollbar

--- a/nav.css
+++ b/nav.css
@@ -6,7 +6,7 @@
     font-size: 100%;
     vertical-align: baseline;
     background: transparent;
-    scrollbar-color: #6a8383 #343f3f;
+    scrollbar-color: #7785b3 #272727;
     scrollbar-width: thin;
     scroll-behavior: smooth;
     font-family: 'Oxanium';
